# mfg-kit

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  TODO.md  pyproject.toml
.zed/: tasks.json
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  config.dart  main.dart  models.dart  session.dart  ui.dart
app/lib/screens/: cart.dart  category.dart  home.dart  login.dart  product.dart  qno.dart  quote_detail.dart  quotes.dart  register.dart  scan.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
backend/app/: main.py
backend/app/core/: auth.py  config.py  db.py
backend/app/jobs/: expire.py
backend/app/routers/: cart.py  catalog.py  qr.py  quotes.py
backend/app/schemas/: catalog.py  quote.py
backend/tests/: conftest.py  test_api_catalog.py  test_auth.py  test_cart.py  test_expire.py  test_healthz.py  test_inventory.py  test_ledger.py  test_mail.py  test_messages.py  test_products.py  test_qr.py  test_qrlabel.py  test_quotes.py  test_staff.py  test_staticgen.py  test_users.py
db/: schema.sql
deploy/: Caddyfile  backup  mfg-api.service  mfg-expire.service  mfg-expire.timer  mfg-staff.service  pocketbase.service  restore.md
docs/: 01_requirements.md  02_api.md  03_apps.md  04_infra.md  05_e2e.md
scripts/: api  db-init  staff
site/: company.json  sample.json
site/static/: style.css
site/templates/: base.html  card.html  category.html  index.html  product.html
staff/: main.py  views.py
(+13 files in other folders)
